force-app/main/default/objects/sugati__Supplier_Payment_Transaction__c/sugati__Supplier_Payment_Transaction__c.object-meta.xml
<CustomObject>
    <label>Supplier Payment Transaction</label>
    <nameField>
        <displayFormat>SPT-{0000000000}</displayFormat>
        <label>Supplier Payment Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>