force-app/main/default/objects/sugati__Supplier_Payment_Transaction__c/fields/sugati__SPT_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPT_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>