force-app/main/default/objects/sugati__Supplier_Payment_Transaction__c/fields/sugati__SPT_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPT_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>