force-app/main/default/objects/sugati__Supplier_Payment_Transaction__c/fields/sugati__SPT_Our_Ref__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPT_Our_Ref__c</fullName>
    <inlineHelpText>Cheque Number of Payment Reference</inlineHelpText>
    <label>Our Ref</label>
    <length>25</length>
    <type>Text</type>
</CustomField>