force-app/main/default/objects/sugati__Supplier_Payment_Transaction__c/fields/sugati__SPT_Remittance_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPT_Remittance_Date__c</fullName>
    <inlineHelpText>Payment Date</inlineHelpText>
    <label>Remittance Date</label>
    <type>Date</type>
</CustomField>