force-app/main/default/objects/sugati__Supplier_Payment_Transaction__c/fields/sugati__SPT_Supplier_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPT_Supplier_Payment__c</fullName>
    <label>Supplier Payment</label>
    <referenceTo>sugati__Supplier_Payment__c</referenceTo>
    <relationshipLabel>Supplier Payment Transactions</relationshipLabel>
    <relationshipName>Supplier_Payment_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>