force-app/main/default/objects/sugati__Supplier_Payment_Transaction__c/fields/sugati__SPT_Write_Off_Balance__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPT_Write_Off_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Write Off Balance</label>
    <type>Checkbox</type>
</CustomField>